# favlist

./: .editorconfig  .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  README.md
.github/: pull_request_template.md
.github/workflows/: create-release-and-assets.yml  create-release-assets.yml  create-release.yml
resources/: favlist-rem.sql
resources/tests/: table_data.tests.table_declaration.sql
src/: cli.rs  main.rs  printer.rs  query_builder.rs  table_data.rs  tui.rs
src/tui/: data.rs
