[package]
name = "favlist"
version = "0.1.0"
authors = ["Spenser Black <spenserblack01@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
# description = ""
readme = "README.md"
# keywords = []
# categories = []
repository = "https://github.com/spenserblack/favlist"
publish = false # You should at least look at this file before you publish
exclude = [".travis.yml", ".editorconfig", ".github/*"]

[dependencies]
clap = "2.33"
lazy_static = "1.4"
regex = "1"

[target.'cfg(not(windows))'.dependencies]
rusqlite = "0.21"

[target.'cfg(windows)'.dependencies]
rusqlite = { version = "0.21", features = ["bundled"] }

[dev-dependencies]
assert_matches = "1.3"

[badges]
travis-ci = { repository = "spenserblack/favlist" }
is-it-maintained-issue-resolution = { repository = "spenserblack/favlist" }
is-it-maintained-open-issues = { repository = "spenserblack/favlist" }
maintenance = { status = "actively-developed" }
