[package]
name = "favlist"
version = "1.0.0"
authors = ["Spenser Black <spenserblack01@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Create and manage lists using SQLite"
readme = "README.md"
keywords = ["list", "sqlite"]
categories = ["command-line-utilities"]
repository = "https://github.com/spenserblack/favlist"
exclude = [".travis.yml", ".editorconfig", ".github/*", "CHANGELOG.md"]

[dependencies]
clap = "2.33"
indexmap = { version = "1.3", features = ["serde-1"] }
lazy_static = "1.4"
prettytable-rs = { version = "0.8", default-features = false }
regex = "1"
serde_json = "1.0"
serde_yaml = "0.8"

[target.'cfg(not(windows))'.dependencies]
rusqlite = "0.21"

[target.'cfg(windows)'.dependencies]
rusqlite = { version = "0.21", features = ["bundled"] }

[dev-dependencies]
assert_matches = "1.3"

[badges]
travis-ci = { repository = "spenserblack/favlist" }
is-it-maintained-issue-resolution = { repository = "spenserblack/favlist" }
is-it-maintained-open-issues = { repository = "spenserblack/favlist" }
maintenance = { status = "actively-developed" }
