[package]
name = "favlist"
version = "2.0.0"
authors = ["Spenser Black <spenserblack01@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Create and manage lists using SQLite"
readme = "README.md"
keywords = ["list", "sqlite"]
categories = ["command-line-utilities"]
repository = "https://github.com/spenserblack/favlist"
exclude = [
    ".travis.yml",
    ".editorconfig",
    ".github/*",
    ".gitignore",
    "images/*",
    "CHANGELOG.md",
]

[features]
default = ["favlist-tui"]
favlist-tui = ["tui", "crossterm"]

[dependencies]
check-latest = { version = "0.4", optional = true }
clap = "2.33"
crossterm = { version = "0.18", optional = true }
indexmap = { version = "1.6", features = ["serde-1"] }
lazy_static = "1.4"
prettytable-rs = { version = "0.8", default-features = false }
regex = "1"
serde_json = "1.0"
serde_yaml = "0.8"

[dependencies.tui]
version = "0.14"
optional = true
default-features = false
features = ["crossterm"]

[target.'cfg(not(windows))'.dependencies]
rusqlite = "0.24"

[target.'cfg(windows)'.dependencies]
rusqlite = { version = "0.24", features = ["bundled"] }

[dev-dependencies]
assert_matches = "1.3"
pretty_assertions = "0.6"

[badges]
travis-ci = { repository = "spenserblack/favlist" }
is-it-maintained-issue-resolution = { repository = "spenserblack/favlist" }
is-it-maintained-open-issues = { repository = "spenserblack/favlist" }
maintenance = { status = "actively-developed" }
